--- a/404.md
+++ b/404.md
@@ -5,25 +5,10 @@ layout: barebones
 
 ## 404 / Not Found
 
-<!--<p>The requested page could not be found.</p>-->
-
 <br/>
 
-Sometimes, when a bird cries out, 
-or the wind sweeps through a tree, 
-or a dog howls in a far off farm, 
-I hold still and listen a long time. 
+Always leave them wanting more. 
 
-My soul turns and goes back to the place
-where, a thousand forgotten years ago, 
-the bird and the blowing wind
-were like me, and were my brothers.
-
-My soul turns into a tree,
-and an animal, and a cloud bank. 
-Then changed and odd it comes home
-and asks me questions. What should I reply?
-
-<i>— Hermann Hess, translated by Robert Bly</i><br/>  
+<i>— Thelonious Monk</i><br/>  
 
 
